[package]
name = "slack_api"
version = "0.15.0"
authors = ["Benjamin Elder <ben.the.elder@gmail.com>", "Matt Jones <mthjones@gmail.com>"]
repository = "https://github.com/slack-rs/slack-rs-api.git"
documentation = "http://slack-rs.github.io/slack-rs-api/slack_api/"
description = "Interface for the Slack Web API"
license = "Apache-2.0"

[features]
default = ["reqwest"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.8.0", optional = true }
